@@ -1,14 +1,11 @@
 # LAN-Game
-Desktop football 2D game.
-This GUI implementation uses external [engine], were you can contribute.
+
+Desktop football 2D game. This GUI implementation uses external [engine] to control the game logic.
 
 [engine]: https://github.com/lipinskipawel/game-engine
 
-## Building from source
- - JDK 15
- - fill `application.properties` with `token.name`, `token.value` and `storage.service` or provide environment variables
- - execute `cd prod-maven-plugin`
- - execute `mvn clean install`
- - execute `cd ../football-gui-game`
- - execute `mvn clean package`
- - run `java -jar --enable-preview football-gui-game/target/football-game.jar` and start playing
+## Building on Linux from source
+
+- JDK 15
+- execute `gradle build`
+- run `java -jar football-gui-game/build/libs/football-gui-game-1.0.0-all.jar`
